--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./css/index.css">
+  <link rel="stylesheet" href="./fonts/icons.css">
   <title>Calendario</title>
 </head>
 <body>
+    <i class="icon-Iconcalendar"></i>
 </body>
 </html>
