Creando campo de busqueda

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
             <div class="miniCalendar-monthDay is-inactive">11</div>
           </div>
         </div>
+        <div class="search" aria-label="Buscador de personas">
+          <a href="#" class="searchIcon">
+            <i class="icon-Iconusers"></i>
+          </a>
+          <input type="text" placeholder="Buscar personas" class="searchInput">
+        </div>
       </div>
 
 
