Creando lista de tareas

--- a/index.html
+++ b/index.html
@@ -123,6 +123,40 @@
           </a>
           <input type="text" placeholder="Buscar personas" class="searchInput">
         </div>
+        <div class="checkList">
+          <div class="checkList-header">
+            <h2 class="checkList-title">Mis calendarios</h2>
+            <a href="#" class="checkList-mark">
+              <i class="icon-Iconchevron-up"></i>
+            </a>
+          </div>
+          <div class="checkList-body">
+            <div class="checkList-item">
+              <a href="#" class="checkList-mark">
+                <i class="icon-Iconcheck-square"></i>
+              </a>
+              <label class="checList-task" aria-label="Leonidas">Leonidas Esteban</label>
+            </div>
+            <div class="checkList-item">
+              <a href="#" class="checkList-mark">
+                <i class="icon-Iconcheck-square"></i>
+              </a>
+              <label class="checList-task" aria-label="Cumpleaños">Cumpleaños</label>
+            </div>
+            <div class="checkList-item">
+              <a href="#" class="checkList-mark">
+                <i class="icon-Iconcheck-square"></i>
+              </a>
+              <label class="checList-task" aria-label="Tareas">Tareas</label>
+            </div>
+            <div class="checkList-item">
+              <a href="#" class="checkList-mark">
+                <i class="icon-Iconcheck"></i>
+              </a>
+              <label class="checList-task" aria-label="Recordatorios">Recordatorios</label>
+            </div>
+          </div>
+        </div>
       </div>
 
 
