--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
           </a>
         </div>
       </header>
-
       <div class="sidebar">
         <button class="button is-rounded is-shadowed">
           <i class="icon-Iconplus" aria-hidden="true"></i>
@@ -162,8 +161,6 @@
           </div>
         </div>
       </div>
-
-
       <main class="calendar">
         <div class="currentTime"></div>
         <div class="calendar-week">
@@ -462,8 +459,65 @@
           <div class="taskCell"></div>
         </div>
       </main>
-
-      <dialog open class="modal"></dialog>
     </div>
+
+    <dialog class="modal">
+      <form class="createTask">
+        <div class="input is-outstanding">
+          <div class="input-body">
+            <input type="text" name="title" placeholder="Añade un título" required>
+          </div>
+        </div>
+        <div class="input">
+          <i class="icon-Iconclock"></i>
+          <div class="input-body">
+            <input type="date" name="date" required>
+            <input type="time" name="time-start" required>
+            <input type="time" name="time-end" required>
+          </div>
+        </div>
+        <div class="input">
+          <i class="icon-Iconusers"></i>
+          <div class="input-body">
+            <input type="text" list="guests" name="guests" placeholder="
+            Agrear invitados" required>
+            <datalist id="guests">
+              <option value="Ricardo"></option>
+              <option value="Daniel"></option>
+              <option value="Gabriela"></option>
+            </datalist>
+          </div>
+        </div>
+        <div class="input">
+          <i class="icon-Icongps"></i>
+          <div class="input-body">
+            <input type="text" name="location" placeholder="Agrega la ubicación" required>
+          </div>
+        </div>
+        <div class="input" >
+          <i class="icon-Icontext"></i>
+          <div class="inputbody">
+            <input type="file" name="file" multiple>
+          </div>
+        </div>
+        <div class="input">
+          <i class="icon-Icontext"></i>
+          <div class="inputbody">
+            <textarea name="description" placeholder="Agrega descripción" cols="40" rows="2"></textarea>
+          </div>
+        </div>
+      </form>
+      <div class="modal-actions">
+        <button class="button">
+          Cancelar
+        </button>
+        <button class="button is-primary">
+          Guardar
+        </button>
+      </div>
+    </dialog>
+    <script>
+      document.querySelector('.modal').showModal()
+    </script>
 </body>
 </html>
