--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
         </div>
       </form>
       <div class="modal-actions">
-        <button class="button">
+        <button id="close-modal" class="button">
           Cancelar
         </button>
         <button class="button is-primary">
@@ -516,8 +516,6 @@
         </button>
       </div>
     </dialog>
-    <script>
-      document.querySelector('.modal').showModal()
-    </script>
+    <script src="./js/app.js" type="module"></script>
 </body>
 </html>
